[package]
name = "portscan"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
colored = "3.0.0"
rand = "0.9.0"
threadpool = "1.8.1"
winapi = { version = "0.3.9", features = ["wincon", "winnt"] }
