[package]
name = "portscan"
version = "1.0.0"
edition = "2024"

[profile.release]
lto = true
strip = true

[dependencies]
colored = "3.1.1"
rand = "0.9.2"
tokio = { version = "1.49.0", features = ["full"] }

[target.'cfg(target_os= "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "winnt"] }
